--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "radium": "^0.13.8"
   },
   "peerDependencies": {
-    "redux": "^2.0.0",
-    "react-redux": "^2.0.0",
-    "react": "^0.13.3"
+    "redux": "^2.0.0 || ^3.0.0",
+    "react-redux": "^2.0.0 || ^3.1.0",
+    "react": "^0.13.3 || ^0.14.0-beta3"
   },
   "devDependencies": {
     "babel-core": "^5.6.18",
