--- a/.eslintrc
+++ b/.eslintrc
@@ -1,25 +1,23 @@
 {
-  "extends": "airbnb",
+  "extends": "eslint-config-airbnb",
   "env": {
     "browser": true,
+    "node": true,
     "mocha": true,
-    "node": true
   },
   "rules": {
-    "valid-jsdoc": 2,
-
     "react/jsx-uses-react": 2,
     "react/jsx-uses-vars": 2,
     "react/react-in-jsx-scope": 2,
-
-    // Disable until Flow supports let and const
-    "no-var": 0,
-    "vars-on-top": 0,
-
-    // Disable comma-dangle unless need to support it
-    "comma-dangle": 0,
-
-    "semi": [2, "never"]
+    "react/jsx-quotes": 0,
+    "jsx-quotes": 2,
+    "comma-dangle": 0,  // airbnb turns this on.
+    "indent": [2, 2, {"SwitchCase": 1}],
+    "no-console": 0,
+    "no-alert": 0,
+    "no-param-reassign": 0,
+    "no-shadow": 0,
+    "no-undef": 2, // why this is not default?!
   },
   "plugins": [
     "react"
