--- a/package.json
+++ b/package.json
@@ -1,49 +1,59 @@
 {
   "name": "re-notif",
-  "version": "0.0.5",
+  "version": "1.0.0",
   "description": "Redux & React based Notifications center",
   "scripts": {
-    "start": "node server.js",
-    "build:lib": "babel src --out-dir lib"
+    "start": "cd demo && node server.js",
+    "build:lib": "BABEL_ENV=production babel src --out-dir lib",
+    "build:demo": "rimraf ./dist_demo && cd demo && webpack -p && mv dist_demo ../"
   },
   "main": "lib/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/indexiatech/re-notif.git"
   },
-  "author": "Indexia Tech",
+  "author": "Indexia Technologies, ltd.",
   "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/indexiatech/re-notif/issues"
   },
-  "homepage": "http://indexiatech.github.io/renotif",
+  "homepage": "http://indexiatech.github.io/re-notif",
   "dependencies": {
-    "radium": "^0.13.8"
+    "classnames": "^2.2.0"
   },
   "peerDependencies": {
     "redux": "^2.0.0 || ^3.0.0",
-    "react-redux": "^2.0.0 || ^3.1.0",
-    "react": "^0.13.3 || ^0.14.0-beta3"
+    "react-redux": "^2.0.0 || ^3.1.0 || ^4.0.0",
+    "react": "^0.13.3 || ^0.14.0"
   },
   "devDependencies": {
-    "babel-core": "^5.6.18",
-    "babel-loader": "^5.1.4",
-    "eslint-config-airbnb": "0.0.8",
-    "eslint-plugin-react": "^3.3.1",
-    "expect": "^1.6.0",
-    "jsdom": "^5.6.1",
-    "mocha": "^2.2.5",
-    "mocha-jsdom": "^1.0.0",
-    "node-libs-browser": "^0.5.2",
-    "node-sass": "^3.3.2",
-    "object-assign": "^4.0.1",
-    "react": "^0.13.3",
-    "react-hot-loader": "^1.3.0",
-    "react-redux": "^2.0.0",
-    "redux": "^2.0.0",
-    "redux-thunk": "^0.1.0",
-    "sass-loader": "^2.0.1",
-    "webpack": "^1.9.11",
-    "webpack-dev-server": "^1.9.0"
+    "babel": "^5.8.23",
+    "babel-core": "^5.8.25",
+    "babel-loader": "^5.3.2",
+    "babel-plugin-react-transform": "^1.1.1",
+    "babel-runtime": "^5.8.25",
+    "css-loader": "^0.20.2",
+    "eslint-plugin-react": "^3.6.3",
+    "express": "^4.13.3",
+    "file-loader": "^0.8.4",
+    "history": "^1.12.5",
+    "node-sass": "^3.3.3",
+    "react-dom": "^0.14.0",
+    "react-intl": "^2.0.0-pr-3",
+    "react-redux": "^4.0.0",
+    "react-router": "^1.0.0-rc3",
+    "react-router-bootstrap": "^0.19.2",
+    "react-transform-hmr": "^1.0.1",
+    "redux": "^3.0.2",
+    "redux-devtools": "^2.1.5",
+    "redux-router": "^1.0.0-beta3",
+    "redux-thunk": "^1.0.0",
+    "rimraf": "^2.4.3",
+    "sass-loader": "^3.0.0",
+    "serve-static": "^1.10.0",
+    "style-loader": "^0.12.4",
+    "webpack": "^1.12.2",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-hot-middleware": "^2.4.1"
   }
 }
