--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "re-notif",
-  "version": "1.0.1",
+  "version": "1.0.4",
   "description": "Redux & React based Notifications center",
   "scripts": {
     "start": "cd demo && node server.js",
-    "build:lib": "BABEL_ENV=production babel src --out-dir lib",
+    "build:lib": "node ./node_modules/better-npm-run build:lib",
     "build:demo": "rimraf ./dist_demo && cd demo && webpack -p && mv dist_demo ../"
+  },
+  "betterScripts": {
+    "build:lib": {
+      "command": "babel src --out-dir lib",
+      "env": {
+        "BABEL_ENV": "production"
+      }
+    }
   },
   "main": "lib/index.js",
   "repository": {
@@ -32,6 +40,7 @@
     "babel-loader": "^5.3.2",
     "babel-plugin-react-transform": "^1.1.1",
     "babel-runtime": "^5.8.25",
+    "better-npm-run": "0.0.5",
     "css-loader": "^0.20.2",
     "eslint-plugin-react": "^3.6.3",
     "express": "^4.13.3",
