* Add TypeScript definition file and typings entry in package.json (bump package.json version to 1.0.5 as well) * Add transition(Enter/Leave)Timeout props to `Notifs` component.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "re-notif",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Redux & React based Notifications center",
   "scripts": {
     "start": "cd demo && node server.js",
@@ -16,6 +16,7 @@
     }
   },
   "main": "lib/index.js",
+  "typings": "./re-notif.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/indexiatech/re-notif.git"
