--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "peerDependencies": {
     "redux": "^2.0.0 || ^3.0.0",
     "react-redux": "^2.0.0 || ^3.1.0 || ^4.0.0",
-    "react": "^0.13.3 || ^0.14.0"
+    "react": "^0.13.3 || ^0.14.0 || ^15.0.0-rc || ^15.0"
   },
   "devDependencies": {
     "babel": "^5.8.23",
