--- a/.eslintrc
+++ b/.eslintrc
@@ -11,13 +11,14 @@
     "react/react-in-jsx-scope": 2,
     "react/jsx-quotes": 0,
     "jsx-quotes": 2,
-    "comma-dangle": 0,  // airbnb turns this on.
+    "comma-dangle": 0,
     "indent": [2, 2, {"SwitchCase": 1}],
+    "max-len": 0,
     "no-console": 0,
     "no-alert": 0,
     "no-param-reassign": 0,
     "no-shadow": 0,
-    "no-undef": 2, // why this is not default?!
+    "no-undef": 2,
   },
   "plugins": [
     "react"
