--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "re-notif",
-  "version": "2.0.1",
+  "name": "redux-notifications",
+  "version": "1.0.0",
   "description": "Redux & React based Notifications center",
   "scripts": {
     "start": "cd demo && node server.js",
