--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Redux & React based Notifications center",
   "scripts": {
     "start": "cd demo && node server.js",
-    "clean": "rm -rf lib",
+    "clean": "rimraf lib",
     "build": "npm run clean && BABEL_ENV=production babel src --out-dir lib",
     "lint": "eslint src",
     "prepublish": "npm run lint && npm run build"
@@ -21,12 +21,10 @@
   },
   "homepage": "http://indexiatech.github.io/re-notif",
   "dependencies": {
-    "react-addons-css-transition-group": "^15.0.2"
-  },
-  "peerDependencies": {
-    "redux": "2.0.0 || ^3.0.0",
-    "react-redux": "^3.1.0 || ^4.0.0",
-    "react": "^0.14.0 || ^15.0.0"
+    "react-addons-css-transition-group": "^15.3.1",
+    "react": "^15.3.1",
+    "react-redux": "^4.0.0",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel": "^5.8.23",
@@ -34,27 +32,23 @@
     "babel-loader": "^5.3.2",
     "babel-plugin-react-transform": "^1.1.1",
     "babel-runtime": "^5.8.25",
-    "css-loader": "^0.23.0",
+    "css-loader": "^0.25.0",
     "eslint": "^2.13.0",
     "eslint-config-airbnb": "^6.0.0",
     "eslint-loader": "^1.1.1",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-react": "^5.2.0",
     "express": "^4.14.0",
-    "file-loader": "^0.9.0",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "react-redux": "^4.0.0",
-    "react-router": "^1.0.0-rc3",
+    "react-dom": "^15.3.1",
     "react-transform-hmr": "^1.0.1",
-    "redux": "^3.5.2",
+    "redux": "^3.6.0",
     "redux-devtools": "^3.3.1",
     "redux-thunk": "^2.1.0",
     "rimraf": "^2.5.2",
     "serve-static": "^1.10.2",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.0",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "webpack": "^1.13.2",
+    "webpack-dev-middleware": "^1.7.0",
+    "webpack-hot-middleware": "^2.12.2"
   }
 }
