--- a/.eslintrc
+++ b/.eslintrc
@@ -6,10 +6,10 @@
     "mocha": true,
   },
   "rules": {
-    "react/jsx-uses-react": 2,
     "react/jsx-uses-vars": 2,
     "react/react-in-jsx-scope": 2,
     "react/jsx-quotes": 0,
+    "react/jsx-filename-extension": 0,
     "jsx-quotes": 2,
     "comma-dangle": 0,
     "indent": [2, 2, {"SwitchCase": 1}],
