--- a/package.json
+++ b/package.json
@@ -36,10 +36,11 @@
     "babel-runtime": "^5.8.25",
     "css-loader": "^0.23.0",
     "eslint": "^2.13.0",
-    "eslint-config-airbnb": "^6.0.0",
+    "eslint-config-airbnb": "^8.0.0",
     "eslint-loader": "^1.1.1",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-react": "^5.2.0",
+    "eslint-plugin-jsx-a11y": "^1.5.5",
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
     "react": "^15.1.0",
