--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "http://indexiatech.github.io/re-notif",
   "dependencies": {
-    "eslint-plugin-import": "^2.0.1",
+    "eslint-plugin-import": "^1.6.0",
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.2",
     "react-redux": "^4.0.0",
@@ -49,7 +49,7 @@
     "rimraf": "^2.5.2",
     "serve-static": "^1.10.2",
     "style-loader": "^0.13.1",
-    "webpack": "^2.1.0-beta.25",
+    "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.13.0"
   }
