--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,22 @@
     "node": true,
     "mocha": true,
   },
-  rules: {
-    "react/jsx-sort-props": 0
-  }
+  "rules": {
+    "react/jsx-uses-vars": 2,
+    "react/react-in-jsx-scope": 2,
+    "react/jsx-quotes": 0,
+    "react/jsx-filename-extension": 0,
+    "jsx-quotes": 2,
+    "comma-dangle": 0,
+    "indent": [2, 2, {"SwitchCase": 1}],
+    "max-len": 0,
+    "no-console": 0,
+    "no-alert": 0,
+    "no-param-reassign": 0,
+    "no-shadow": 0,
+    "no-undef": 2,
+  },
+    "plugins": [
+      "react"
+   ]
 }
