--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.1.1",
   "description": "Redux & React based Notifications center",
   "scripts": {
-    "start": "cd demo && node server.js",
+    "start": "cd demo && webpack-dev-server --config webpack.config.js --progress --colors --port 9000",
     "clean": "rimraf lib",
     "build": "npm run clean && BABEL_ENV=production babel src --out-dir lib",
     "lint": "eslint src",
@@ -21,11 +21,13 @@
   },
   "homepage": "http://indexiatech.github.io/re-notif",
   "devDependencies": {
-    "babel": "^5.8.23",
-    "babel-core": "^5.8.25",
-    "babel-loader": "^5.3.2",
-    "babel-plugin-react-transform": "^1.1.1",
-    "babel-runtime": "^5.8.25",
+    "babel-cli": "^6.16.0",
+    "babel-core": "^6.13.2",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.25.0",
     "eslint": "^2.13.0",
     "eslint-config-airbnb": "^8.0.0",
@@ -46,8 +48,6 @@
     "rimraf": "^2.5.2",
     "serve-static": "^1.10.2",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.0",
-    "webpack-dev-middleware": "^1.8.4",
-    "webpack-hot-middleware": "^2.13.0"
+    "webpack": "^1.13.0"
   }
 }
