--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "rimraf": "^2.5.2",
     "serve-static": "^1.10.2",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.0"
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.16.2"
   }
 }
