--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "http://indexiatech.github.io/re-notif",
   "dependencies": {
-    "react-addons-css-transition-group": "^15.3.2"
+    "react-transition-group": "^1.1.3"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
