--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-jsx-a11y": "^1.5.5",
     "eslint-plugin-react": "^5.2.0",
     "express": "^4.14.0",
+    "prop-types": "^15.5.10",    
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.0.0",
