--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "url": "https://github.com/indexiatech/re-notif/issues"
   },
   "homepage": "http://indexiatech.github.io/re-notif",
+  "dependencies": {
+    "object-assign": "^4.1.1",
+    "prop-types": "^15.5.10",
+    "react-redux": "^4.0.0",
+    "react-transition-group": "^1.1.3"
+  },
   "devDependencies": {
     "babel-cli": "^6.16.0",
     "babel-core": "^6.13.2",
@@ -37,11 +43,6 @@
     "eslint-plugin-jsx-a11y": "^1.5.5",
     "eslint-plugin-react": "^5.2.0",
     "express": "^4.14.0",
-    "object-assign": "^4.1.1",
-    "prop-types": "^15.5.10",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-redux": "^4.0.0",
     "react-transform-hmr": "^1.0.1",
     "react-transition-group": "^1.1.3",
     "redux": "^3.6.0",
@@ -52,5 +53,9 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.16.2"
+  },
+  "peerDependencies": {
+    "react": "^0.14.0 || ^15.0.0-0 || ^15.4.0-0 || ^16.0.0-0",
+    "react-dom": "^0.14.0 || ^15.0.0-0 || ^15.4.0-0 || ^16.0.0-0"
   }
 }
