--- a/package.json
+++ b/package.json
@@ -20,13 +20,18 @@
     "url": "https://github.com/indexiatech/re-notif/issues"
   },
   "homepage": "http://indexiatech.github.io/re-notif",
+  "typings": "./index.d.ts",
   "dependencies": {
     "object-assign": "^4.1.1",
     "prop-types": "^15.5.10",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-redux": "^4.0.0",
     "react-transition-group": "^1.1.3"
   },
   "devDependencies": {
+    "@types/react": "^16.0.31",
+    "@types/redux": "^3.6.0",
     "babel-cli": "^6.16.0",
     "babel-core": "^6.13.2",
     "babel-eslint": "^6.1.2",
