--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "object-assign": "^4.1.1",
     "prop-types": "^15.5.10",
     "react-redux": "^4.0.0",
-    "react-transition-group": "^1.1.3"
-  },
-  "devDependencies": {
+    "react-transition-group": "^1.1.3",
     "babel-cli": "^6.16.0",
     "babel-core": "^6.13.2",
     "babel-eslint": "^6.1.2",
@@ -54,6 +52,8 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.16.2"
+  },
+  "devDependencies": {
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0-0 || ^15.4.0-0 || ^16.0.0-0",
