--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   "dependencies": {
     "object-assign": "^4.1.1",
     "prop-types": "^15.5.10",
-    "react-redux": "^4.0.0",
     "react-transition-group": "^1.1.3"
   },
   "devDependencies": {
@@ -43,9 +42,12 @@
     "eslint-plugin-jsx-a11y": "^1.5.5",
     "eslint-plugin-react": "^5.2.0",
     "express": "^4.14.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-transform-hmr": "^1.0.1",
     "react-transition-group": "^1.1.3",
     "redux": "^3.6.0",
+    "react-redux": "^4.0.0",
     "redux-devtools": "^3.3.1",
     "redux-thunk": "^2.1.0",
     "rimraf": "^2.5.2",
@@ -56,6 +58,7 @@
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0-0 || ^15.4.0-0 || ^16.0.0-0",
-    "react-dom": "^0.14.0 || ^15.0.0-0 || ^15.4.0-0 || ^16.0.0-0"
+    "react-dom": "^0.14.0 || ^15.0.0-0 || ^15.4.0-0 || ^16.0.0-0",
+    "react-redux": ">=4.0.0"
   }
 }
