--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "webpack-dev-server": "^1.16.2"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0-0 || ^15.4.0-0 || ^16.0.0-0",
-    "react-dom": "^0.14.0 || ^15.0.0-0 || ^15.4.0-0 || ^16.0.0-0"
+    "react": "0.14.0 || ^15.0.0-0 || ^15.4.0-0 || ^16.0.0-0 || ^17.0.0",
+    "react-dom": "^0.14.0 || ^15.0.0-0 || ^15.4.0-0 || ^16.0.0-0 || ^17.0.0"
   }
 }
