--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "eslint-plugin-jsx-a11y": "^1.5.5",
     "eslint-plugin-react": "^5.2.0",
     "express": "^4.14.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-transform-hmr": "^1.0.1",
     "react-transition-group": "^1.1.3",
     "redux": "^3.6.0",
