--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "cd demo && webpack-dev-server --config webpack.config.js --progress --colors --port 9000",
     "clean": "rimraf lib",
-    "build": "npm run clean && BABEL_ENV=production babel src --out-dir lib && cp src/styles.css lib/styles.css",
+    "build": "npm run clean && cross-env BABEL_ENV=production babel src --out-dir lib && cpx src/styles.css lib",
     "lint": "eslint src",
     "prepublish": "npm run lint && npm run build"
   },
@@ -34,6 +34,8 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "cpx": "^1.5.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^0.25.0",
     "eslint": "^2.13.0",
     "eslint-config-airbnb": "^8.0.0",
