--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   "dependencies": {
     "object-assign": "^4.1.1",
     "prop-types": "^15.5.10",
-    "react-redux": "^4.0.0",
     "react-transition-group": "^1.1.3"
   },
   "devDependencies": {
@@ -47,6 +46,7 @@
     "express": "^4.14.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-transform-hmr": "^1.0.1",
     "react-transition-group": "^1.1.3",
     "redux": "^3.6.0",
@@ -60,6 +60,7 @@
   },
   "peerDependencies": {
     "react": "0.14.0 || ^15.0.0-0 || ^15.4.0-0 || ^16.0.0-0 || ^17.0.0",
-    "react-dom": "^0.14.0 || ^15.0.0-0 || ^15.4.0-0 || ^16.0.0-0 || ^17.0.0"
+    "react-dom": "^0.14.0 || ^15.0.0-0 || ^15.4.0-0 || ^16.0.0-0 || ^17.0.0",
+    "react-redux": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0"
   }
 }
