--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "homepage": "http://indexiatech.github.io/re-notif",
   "dependencies": {
     "object-assign": "^4.1.1",
-    "prop-types": "^15.5.10",
-    "react-transition-group": "^1.1.3"
+    "prop-types": "^15.7.2",
+    "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
@@ -44,13 +44,12 @@
     "eslint-plugin-jsx-a11y": "^1.5.5",
     "eslint-plugin-react": "^5.2.0",
     "express": "^4.14.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
+    "react-redux": "^7.0.0",
     "react-transform-hmr": "^1.0.1",
-    "react-transition-group": "^1.1.3",
     "redux": "^3.6.0",
-    "redux-devtools": "^3.3.1",
+    "redux-devtools": "^3.7.0",
     "redux-thunk": "^2.1.0",
     "rimraf": "^2.5.2",
     "serve-static": "^1.10.2",
@@ -59,8 +58,8 @@
     "webpack-dev-server": "^1.16.2"
   },
   "peerDependencies": {
-    "react": "0.14.0 || ^15.0.0-0 || ^15.4.0-0 || ^16.0.0-0 || ^17.0.0",
-    "react-dom": "^0.14.0 || ^15.0.0-0 || ^15.4.0-0 || ^16.0.0-0 || ^17.0.0",
-    "react-redux": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0"
+    "react": "^16.8.4 || ^17.0.0",
+    "react-dom": "^16.8.4 || ^17.0.0",
+    "react-redux": "^7.0.0"
   }
 }
